# django-rest-captcha

./: README.md  pyproject.toml  runtests.py
rest_captcha/: __init__.py  captcha.py  serializers.py  settings.py  tests.py  utils.py  views.py
