[tool.poetry]
name = "django-rest-captcha"
version = "0.4.1"
description = "Lightweight version of django-simple-captcha for work with django-rest-framework"
readme = "README.md"
authors = ["Troyhy <toni@montel.fi>","evgeny.zuev <zueves@gmail.com>", "e9000000000 <skipper224483@gmail.com>"]
license = "MIT"
packages = [
    {include = "rest_captcha"},
]

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15"
django="^4.2"
Pillow = "9.0.0"

[tool.poetry.dev-dependencies]
mypy = "^1.12.1"
black = "^22.12.0"
pylama = "^8.3.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
tests = "runtests:main"
